[package]
name = "drop-root-caps"
description = "A simple crate to drop 'root' user capabilities on Linux"
authors = ["LoRd_MuldeR <mulder2@gmx.de>"]
license = "0BSD"
repository = "https://github.com/lordmulder/drop-root-caps/"
version = "1.2.0"
edition = "2021"
categories = ["development-tools::testing", "os", "no-std", "security"]
keywords = ["testing", "capabilities", "linux", "docker"]

[package.metadata]
no_std = true

[features]
default = ["ctor"]
ctor = ["ctor/proc_macro"]

[target.'cfg(target_os = "linux")'.dependencies]
ctor = { version = "0.6.3", default-features = false, optional = true }
libc = { version =  "0.2.178", default-features = false }
